platform/dex-secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: auth
sops:
    age:
        - recipient: age1je7fgegf38rae7uxc4gyc4e2qd3d4k6ggchlx4hg2p5tux9ejvvsvyd34y
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBVRlBERlh2WURYalcvSmw2
[...]
            wC0gQFxZI5OA5HX9Opz9uoTVTSZ6coEbLXaQysNob9z2u1hUOY9muA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-03-03T10:24:57Z"
    mac: ENC[AES256_GCM,data:CZ5XRgf5HvUXbu1P2m5inVdAkr23tSn1sNj2Hrxz4CJ9somAgPPICj0CwmyBAw95QUA81nYzk4UgAlNqybKDtrD91Ianp1szJe1xyaUCUVjU2CVnQbcV6NF6PzOtlNvVvVjb/PiekaKFrdJckZL54FXSWy9K8VhK4rJ30dFpFEQ=,iv:/6V+p0cu6/oWr0HdR3kPifJsDjgeYv8mozXRGHEZcEQ=,tag:xujQkHxyIEyMtYtA8XujgA==,type:str]
    encrypted_regex: ^(data|stringData)$
    version: 3.12.1
