platform/dex-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dex-route
  namespace: auth
spec:
  parentRefs:
    - name: main-gateway
      namespace: default
  hostnames:
    - "dex.cereghino.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dex
          port: 5556
